// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Renders the UI snapshot correctly 1`] = `
<label
  className="css-1xdhyk6"
  htmlFor="some-input-id"
  id="label"
>
  Cupcakes
</label>
`;

exports[`Label Renders the UI snapshot correctly 2`] = `
<label
  className="css-1xdhyk6"
  htmlFor="some-input-id"
  id="label3"
>
  Cupcakes
  <span>
     (required)
  </span>
</label>
`;

exports[`Label Renders the UI snapshot correctly 3`] = `
<label
  className="css-1xdhyk6"
  htmlFor="some-input-id"
  id="label3"
>
  Cupcakes
  <span>
     (Obligatoire)
  </span>
</label>
`;

exports[`Label Renders the UI snapshot correctly 4`] = `
<label
  className="css-kle7zy"
  htmlFor="some-input-id"
  id="chakra"
>
  Cupcakes
</label>
`;

exports[`Label Renders the UI snapshot correctly 5`] = `
<label
  className="css-1xdhyk6"
  data-testid="props"
  htmlFor="some-input-id"
  id="props"
>
  Cupcakes
</label>
`;
